[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/main.gd" id=1]
[ext_resource type="Script" path="res://scripts/map_view.gd" id=2]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MainSplit" type="VSplitContainer" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopSplit" type="HSplitContainer" parent="MainSplit"]

[node name="LeftPanel" type="VBoxContainer" parent="MainSplit/TopSplit"]
custom_minimum_size = Vector2(820, 0)

[node name="FitButton" type="Button" parent="MainSplit/TopSplit/LeftPanel"]
text = "Fit"

[node name="ObjectiveRadiusToggle" type="CheckBox" parent="MainSplit/TopSplit/LeftPanel"]
text = "Показывать радиус целей"
button_pressed = true

[node name="MapView" type="Control" parent="MainSplit/TopSplit/LeftPanel"]
custom_minimum_size = Vector2(820, 520)
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="RightPanel" type="ScrollContainer" parent="MainSplit/TopSplit"]
custom_minimum_size = Vector2(360, 0)

[node name="RightContent" type="VBoxContainer" parent="MainSplit/TopSplit/RightPanel"]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StatusGroup" type="VBoxContainer" parent="MainSplit/TopSplit/RightPanel/RightContent"]

[node name="StatusTitle" type="Label" parent="MainSplit/TopSplit/RightPanel/RightContent/StatusGroup"]
text = "СТАТУС"

[node name="RoundLabel" type="Label" parent="MainSplit/TopSplit/RightPanel/RightContent/StatusGroup"]
text = "Раунд: —"

[node name="TurnLabel" type="Label" parent="MainSplit/TopSplit/RightPanel/RightContent/StatusGroup"]
text = "Ход: —"

[node name="PhaseLabel" type="Label" parent="MainSplit/TopSplit/RightPanel/RightContent/StatusGroup"]
text = "Фаза: —"

[node name="ActiveLabel" type="Label" parent="MainSplit/TopSplit/RightPanel/RightContent/StatusGroup"]
text = "Активен: —"

[node name="PointsGroup" type="VBoxContainer" parent="MainSplit/TopSplit/RightPanel/RightContent"]

[node name="PointsTitle" type="Label" parent="MainSplit/TopSplit/RightPanel/RightContent/PointsGroup"]
text = "ОЧКИ"

[node name="PlayerVPLabel" type="Label" parent="MainSplit/TopSplit/RightPanel/RightContent/PointsGroup"]
text = "Player VP: —"

[node name="ModelVPLabel" type="Label" parent="MainSplit/TopSplit/RightPanel/RightContent/PointsGroup"]
text = "Model VP: —"

[node name="PlayerCPLabel" type="Label" parent="MainSplit/TopSplit/RightPanel/RightContent/PointsGroup"]
text = "Player CP: —"

[node name="ModelCPLabel" type="Label" parent="MainSplit/TopSplit/RightPanel/RightContent/PointsGroup"]
text = "Model CP: —"

[node name="UnitsGroup" type="VBoxContainer" parent="MainSplit/TopSplit/RightPanel/RightContent"]

[node name="UnitsTitle" type="Label" parent="MainSplit/TopSplit/RightPanel/RightContent/UnitsGroup"]
text = "ОТРЯДЫ"

[node name="UnitsTable" type="GridContainer" parent="MainSplit/TopSplit/RightPanel/RightContent/UnitsGroup"]
columns = 5

[node name="UnitsHeaderId" type="Label" parent="MainSplit/TopSplit/RightPanel/RightContent/UnitsGroup/UnitsTable"]
text = "ID"

[node name="UnitsHeaderSide" type="Label" parent="MainSplit/TopSplit/RightPanel/RightContent/UnitsGroup/UnitsTable"]
text = "Сторона"

[node name="UnitsHeaderHP" type="Label" parent="MainSplit/TopSplit/RightPanel/RightContent/UnitsGroup/UnitsTable"]
text = "HP"

[node name="UnitsHeaderModels" type="Label" parent="MainSplit/TopSplit/RightPanel/RightContent/UnitsGroup/UnitsTable"]
text = "Модели"

[node name="UnitsHeaderCoord" type="Label" parent="MainSplit/TopSplit/RightPanel/RightContent/UnitsGroup/UnitsTable"]
text = "Коорд."

[node name="LegendGroup" type="VBoxContainer" parent="MainSplit/TopSplit/RightPanel/RightContent"]

[node name="LegendTitle" type="Label" parent="MainSplit/TopSplit/RightPanel/RightContent/LegendGroup"]
text = "ЛЕГЕНДА"

[node name="LegendList" type="VBoxContainer" parent="MainSplit/TopSplit/RightPanel/RightContent/LegendGroup"]

[node name="LegendPlayer" type="HBoxContainer" parent="MainSplit/TopSplit/RightPanel/RightContent/LegendGroup/LegendList"]

[node name="LegendPlayerSwatch" type="ColorRect" parent="MainSplit/TopSplit/RightPanel/RightContent/LegendGroup/LegendList/LegendPlayer"]
custom_minimum_size = Vector2(14, 14)
color = Color(0.26, 0.72, 1, 1)

[node name="LegendPlayerLabel" type="Label" parent="MainSplit/TopSplit/RightPanel/RightContent/LegendGroup/LegendList/LegendPlayer"]
text = "Игрок"

[node name="LegendModel" type="HBoxContainer" parent="MainSplit/TopSplit/RightPanel/RightContent/LegendGroup/LegendList"]

[node name="LegendModelSwatch" type="ColorRect" parent="MainSplit/TopSplit/RightPanel/RightContent/LegendGroup/LegendList/LegendModel"]
custom_minimum_size = Vector2(14, 14)
color = Color(0.96, 0.4, 0.4, 1)

[node name="LegendModelLabel" type="Label" parent="MainSplit/TopSplit/RightPanel/RightContent/LegendGroup/LegendList/LegendModel"]
text = "Модель"

[node name="LegendObjective" type="HBoxContainer" parent="MainSplit/TopSplit/RightPanel/RightContent/LegendGroup/LegendList"]

[node name="LegendObjectiveSwatch" type="ColorRect" parent="MainSplit/TopSplit/RightPanel/RightContent/LegendGroup/LegendList/LegendObjective"]
custom_minimum_size = Vector2(14, 14)
color = Color(0.95, 0.85, 0.45, 1)

[node name="LegendObjectiveLabel" type="Label" parent="MainSplit/TopSplit/RightPanel/RightContent/LegendGroup/LegendList/LegendObjective"]
text = "Цель"

[node name="CommandsGroup" type="VBoxContainer" parent="MainSplit/TopSplit/RightPanel/RightContent"]

[node name="CommandsTitle" type="Label" parent="MainSplit/TopSplit/RightPanel/RightContent/CommandsGroup"]
text = "КОМАНДЫ"

[node name="CommandPrompt" type="Label" parent="MainSplit/TopSplit/RightPanel/RightContent/CommandsGroup"]
text = "Ожидаю команду..."

[node name="CommandHint" type="Label" parent="MainSplit/TopSplit/RightPanel/RightContent/CommandsGroup"]
text = "Горячие клавиши: Enter — отправить, Ctrl+L — очистить"

[node name="CommandInputRow" type="HBoxContainer" parent="MainSplit/TopSplit/RightPanel/RightContent/CommandsGroup"]

[node name="CommandInput" type="LineEdit" parent="MainSplit/TopSplit/RightPanel/RightContent/CommandsGroup/CommandInputRow"]
size_flags_horizontal = 3
placeholder_text = "Введите команду..."

[node name="CommandSend" type="Button" parent="MainSplit/TopSplit/RightPanel/RightContent/CommandsGroup/CommandInputRow"]
text = "Отправить"

[node name="LogGroup" type="VBoxContainer" parent="MainSplit"]
custom_minimum_size = Vector2(0, 220)

[node name="LogTitle" type="Label" parent="MainSplit/LogGroup"]
text = "ЖУРНАЛ"

[node name="LogTabs" type="TabContainer" parent="MainSplit/LogGroup"]
custom_minimum_size = Vector2(0, 200)

[node name="AllTab" type="TextEdit" parent="MainSplit/LogGroup/LogTabs"]
editable = false

[node name="TurnTab" type="TextEdit" parent="MainSplit/LogGroup/LogTabs"]
editable = false

[node name="ShootingTab" type="TextEdit" parent="MainSplit/LogGroup/LogTabs"]
editable = false

[node name="FightTab" type="TextEdit" parent="MainSplit/LogGroup/LogTabs"]
editable = false

[node name="DiceTab" type="TextEdit" parent="MainSplit/LogGroup/LogTabs"]
editable = false

[node name="ErrorsTab" type="TextEdit" parent="MainSplit/LogGroup/LogTabs"]
editable = false
